--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
   <body>
     <h1><%= title %></h1>
     <p><%= title %> es el portal donde puede crear sus propios juegos!</p>
+    <p><a href="/quizes/question">Comience a jugar</a></p>
   </body>
 </html>
