--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p><%= title %> es el portal donde puede crear sus propios juegos!</p>
-    <p><a href="/quizes/question">Comience a jugar</a></p>
-  </body>
-</html>
+<h3>Bienvenido a <%= title %></h3>
+  El portal donde podrá crear sus propios juegos!
