--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,12 +9,13 @@
 <div id="page-wrap">
   <header class="main" id="h1">
       
-    <h2><%=title%>: el juego de las preguntas</h2>
+    <h2>QUIZ: el juego de las preguntas</h2>
   </header>
 
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
     <span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/author">Créditos</a></span>
   </nav>
 
   <section class="main" id="s1">
@@ -24,6 +25,8 @@
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">
       ¿Que es un Quiz?</a>
+    <a href="https://github.com/srequiz/quizgame">
+      Ver Proyecto GitHub</a>
   </footer>
 </div>
 </body> 
