--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -9,6 +9,6 @@
   <body>
     <h2>Quiz: El Juego de Las Preguntas</h2>
         <p> La Respuesta: <%= respuesta %> </p>
-    <a href="/quizes/question"> Intentelo otra vez </a>
+    <a href="/quizes/<%= quiz.id %>" Intentelo otra vez </a>
   </body>
 </html>
