--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,12 +14,26 @@
 
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
-    <span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/quizes">Preguntas</a></span>
     <span><a href="/author">Créditos</a></span>
   </nav>
 
   <section class="main" id="s1">
-    <%- body %>
+    <div> <table>
+      <tr><td>
+        <a href="quizes/1">Capital de Italia</a>
+      </td>
+      </tr>
+      <tr><td>
+        <a href="quizes/2">Capital de Portugal</a>
+      </td>
+      </tr>
+
+    </table>
+      
+
+
+    </div>
   </section>
 
   <footer class="main" id="f1">
